--- a/index.css
+++ b/index.css
@@ -1,32 +1,40 @@
 html {
   font-family: sans-serif;
-  font-size: calc(1em + 1vmin + 2vmax);
+  font-size: max(30pt, 8vw);
 }
 
 body {
-  padding: 1em;
+  padding: 0;
   display: flex;
   flex-flow: column;
   margin: auto;
+  align-items: center;
 }
 
-article {
-  line-height: 1.5;
+header {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
 }
 
-menu {
-  padding: 0;
-  list-style: none;
+footer {
+  font-size: 0;
+  transition: 2s ease-in;
 }
 
-sup {
-  display: contents;
-  font-size: inherit;
-  font-weight: 500;
+#edit:target footer {
+  font-size: 1em;
 }
 
-sub {
-  display: contents;
-  font-size: inherit;
-  font-weight: 600;
+:focus {
+  outline-style: double;
+  outline-width: thick;
+}
+
+h1 {
+  margin: 0;
+}
+
+strong {
+  font-size: max(30pt, 2rem);
 }
